[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# isa-debug-exit: allows qemu to exit automatically in debug mod
# when a value is written to iobase, qemu would exit with the input exit status
# exit status: (value << 1) | 1
# "-serial" "studio": redirect serial printing in qemu to the console
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
# By default, any exit code other than 0 is considered failed by Rust
# we change the exit code to 33 (00100001)
test-success-exit-code = 33


# allow should_panic (which only has 1 test function) without test_runner
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false